Fix search bar margin spacing

--- a/app/components/form/form.css
+++ b/app/components/form/form.css
@@ -12,3 +12,7 @@
 img {
   margin-bottom: var(--block-spacing-vertical);
 }
+
+details {
+  margin-top: var(--spacing);
+}
